# laowa

./: .gitignore  4_一种面向字节的杂凑密码设计_new.docx  字节算法描述.docx  活跃S盒结果(胡泓震).docx  活跃S盒结果模板.docx  面向字的杂凑密码设计接口文档.docx
ImpossibleDifferential/: CMakeLists.txt  impossibleDifferential.txt  main.cpp  mitm.py  mitmFactory.py  toolkit.h
ImpossibleDifferential/pic/: MitmSolutionToTikz.py  output_2024-11-04_13-43-39.tex  output_2024-11-04_20-37-08.tex  output_2024-11-05_11-28-03.tex  output_2024-11-05_14-36-33.tex
analysis/: active_sbox_results  draw.py  example_model.lp  good_parameters  hash_analysis.py  make_docx.py  mds  mds.py  misc.py  run  running  xor_table
analysis/documents/: main.md  run  会议纪要.docx  会议纪要.txt  胡泓震项目关键技术.docx  设计技术方案(1).docx
project/: 51hash.py  51hash.spec  run
project/src/analyze1_rebound/: cipher_analy.py  milp_rebound_friendly_trunted_diff_path.py  min_guess_value_key.py  trunted_diff_path2_tex.py  ulity.py  worker1.py
project/src/analyze2_diff_collision/: boolear.py  sha2likeCode.py
project/src/analyze3_mitm/: mitmFactory.py  mitm_4.py
project/src/design1_bit/: bithash.py  bithash_gen.py  sbox
project/src/design2_byte/: hash_gen.py  hash_gen.sage.py  hash_impl.py  misc1.py
project/vue/src/: App.vue  main.js  router.js
project/vue/src/components/: ByteAlgorithmDisplay.vue  ByteMDS.vue  HeaderBar.vue  SideBar.vue
project/vue/src/views/: BitAlgorithm.vue  BitSbox.vue  ByteAlgorithm.vue  ByteMDS.vue  CipherForm.vue  DifferentialCollision.vue  DifferentialCollision_old.vue  HashCall.vue  Home.vue  HomePage.vue  MitMAnalysis.vue  (+5 more)
(+15 files in other folders)
